회원가입&로그인 구현 #2

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring.application.name: e-commerce
 spring:
   config:
     import:
-      - classpath:/application-local.yml
+      - classpath:/static/application-local.yml
       - classpath:/application-prod.yml
 
   profiles:
