상품 기능 구현 #3

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ out/
 .vscode/
 
 **/generated/**
+application-test.yml
+application-secret.yml
 application-local.yml
 application-prod.yml
 data/**
