--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.2.6'
     id 'io.spring.dependency-management' version '1.1.5'
     id 'com.palantir.docker' version '0.35.0'
+    id 'jacoco'
 }
 
 group = 'com'
@@ -49,10 +50,16 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
-}
+    // https://mvnrepository.com/artifact/io.awspring.cloud/spring-cloud-starter-aws
+    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
-tasks.named('test') {
-    useJUnitPlatform()
+    // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+
+    // https://mvnrepository.com/artifact/net.coobird/thumbnailator
+    implementation 'net.coobird:thumbnailator:0.4.20'
+
 }
 
 // QueryDsl 디렉토리 경로
@@ -66,12 +73,57 @@ tasks.withType(JavaCompile) {
     options.generatedSourceOutputDirectory = file(querydslSrcDir)
 }
 
+// 도커
 docker {
     println(tasks.bootJar.outputs.files)
     name project.name.toLowerCase() + ":" + version
     dockerfile file('./Dockerfile')
     files tasks.bootJar.outputs.files
     buildArgs(['JAR_FILE': tasks.bootJar.outputs.files.singleFile.name])
+}
+
+test {
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+// jacooc
+jacocoTestReport {
+    dependsOn test
+    finalizedBy jacocoTestCoverageVerification
+
+    excludedClassFilesForReport(classDirectories)
+}
+
+private excludedClassFilesForReport(classDirectories) {
+    classDirectories.setFrom(
+            files(classDirectories.files.collect {
+                fileTree(dir: it, exclude: [
+                        "**/protobuf/**",
+                        "**/*Application*",
+                        "**/*Config*",
+                        "**/entity/Q*",
+                        "**/common/Q*",
+                        "**/S3Utils*"
+                ])
+            })
+    )
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            element = 'CLASS'
+            includes = ['com.ecommerce.**.usecase.**']
+
+            limit {
+                counter = 'LINE'
+                value = 'COVEREDRATIO'
+                minimum = 0.8
+            }
+
+        }
+    }
 }
 
 
