--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,15 +20,15 @@ services:
     volumes:
       - ./data/redis_data:/data
 
-  ecommerce:
-    image: e-commerce:0.0.2
-    networks:
-      - ecommerce_network
-    ports:
-      - "8080:8080"
-    depends_on:
-      - mysql
-      - redis
+#  ecommerce:
+#    image: e-commerce:0.0.2
+#    networks:
+#      - ecommerce_network
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - mysql
+#      - redis
 
 networks:
   ecommerce_network:
