--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,6 +2,10 @@ spring:
   profiles:
     default: test
 
+  config:
+    import:
+      - classpath:/application-secret.yml
+
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -20,3 +24,5 @@ spring:
     console:
       enabled: true
       path: /h2-console
+
+
