--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     import:
       - classpath:/application-local.yml
       - classpath:/application-prod.yml
+      - classpath:/application-secret.yml
 
   profiles:
     default: local
