--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring.application.name: e-commerce
+server.port: 8081
 
 spring:
   config:
@@ -14,3 +15,14 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+
+eureka:
+  instance:
+    instance-id: ${spring.application.name}:${server.port}
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://127.0.0.1:8761/eureka
+
+
