결제 서버 분리 #13

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'apigateway-service'
 include 'product-service'
 include 'order-service'
 include 'member-service'
+include 'payment-service'
 
