배송 서버 분리 #13

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'product-service'
 include 'order-service'
 include 'member-service'
 include 'payment-service'
+include 'delivery-service'
 
