로그 설정 & zipkin 도입 #15

--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -10,7 +10,6 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
-
 spring.application.name: gateway-service
 
 spring:
@@ -18,3 +17,17 @@ spring:
     import:
       - classpath:/application-route.yml
       - classpath:/application-secret.yml
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+    propagation:
+      consume: b3
+      produce: b3_multi
+  zipkin:
+    tracing:
+      endpoint: "http://localhost:9411/api/v2/spans"
+logging:
+  pattern:
+    level: "%5p [%X{traceId:-},%X{spanId:-}]"
