--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,6 @@ include 'order-service'
 include 'member-service'
 include 'payment-service'
 include 'delivery-service'
+include 'logging-producer'
+include 'logging-consumer'
 
