--- a/logging-producer/build.gradle
+++ b/logging-producer/build.gradle
@@ -25,6 +25,14 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
 
+    // zipkin
+    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
+    implementation 'io.github.openfeign:feign-micrometer:13.3'
+    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+
+    // actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 }
 
 test {
