--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.0'
 
+    // kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+
     implementation project(':logging-producer')
 }
 
