--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-zipkin
     implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.8.RELEASE'
 
+    // kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+
     implementation project(':logging-producer')
 
 }
