--- a/delivery-service/build.gradle
+++ b/delivery-service/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
-    implementation project(':logging-producer')
+    implementation project(':common')
 }
 
 test {
