--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
-    implementation project(':logging-producer')
+    implementation project(':common')
 
 }
 
