common 폴더 경량화 & 컨슈머 서버 분리 #14

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,12 @@ include 'payment-service'
 include 'delivery-service'
 include 'common'
 include 'logging-consumer'
+include 'payment-service:payment-consumer'
+findProject(':payment-service:payment-consumer')?.name = 'payment-consumer'
+include 'order-service:order-consumer'
+findProject(':order-service:order-consumer')?.name = 'order-consumer'
+include 'delivery-service:delivery-consumer'
+findProject(':delivery-service:delivery-consumer')?.name = 'delivery-consumer'
+include 'product-service:product-consumer'
+findProject(':product-service:product-consumer')?.name = 'product-consumer'
 
