--- a/member-service/build.gradle
+++ b/member-service/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
+    // kafka
+    implementation 'org.springframework.kafka:spring-kafka'
 
     implementation project(':common')
 }
