트랜잭셔널 아웃박스 패턴 구현 #16

--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -48,6 +48,9 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    // actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
     implementation project(':common')
 }
 
