--- a/order-service/order-consumer/build.gradle
+++ b/order-service/order-consumer/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
+    // actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
     implementation project(':order-service')
 }
 
