--- a/payment-service/payment-consumer/build.gradle
+++ b/payment-service/payment-consumer/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
+    // actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
     implementation project(':payment-service')
 }
 
