--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
+    // actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 }
 
 // QueryDsl 디렉토리 경로
