--- a/delivery-service/build.gradle
+++ b/delivery-service/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
+    // actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 }
 
 test {
