--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
+
+    // actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 // QueryDsl 디렉토리 경로
