트랜잭션 수정 #16

--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -3,6 +3,7 @@ server:
 
 eureka:
   instance:
+    hostname: localhost
     instance-id: ${spring.application.name}:${server.port}
   client:
     register-with-eureka: true
