--- a/delivery-service/src/main/resources/application.yml
+++ b/delivery-service/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
 
 eureka:
   instance:
+    hostname: localhost
     instance-id: ${spring.application.name}:${server.port}
   client:
     register-with-eureka: true
