--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
 
 eureka:
   instance:
+    hostname: localhost
     instance-id: ${spring.application.name}:${server.port}
   client:
     register-with-eureka: true
