상품에서 주문하기 & 장바구니에서 주문하기 로직 변경 및 테스트 코드 추가 #14

--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     // actuator
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+    // https://mvnrepository.com/artifact/org.testcontainers/testcontainers
+    testImplementation 'org.testcontainers:testcontainers:1.19.7'
+
     implementation project(':common')
 }
 
