--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,47 @@ services:
       - "3306:3306"
     volumes:
       - ./data/mysql_data:/var/lib/mysql
-  
+  mysql-order:
+    image: mysql:8.0
+    networks:
+      - ecommerce_network
+    environment:
+      - MYSQL_ROOT_PASSWORD=1234
+    ports:
+      - "3311:3306"
+    volumes:
+      - ./data/order:/var/lib/mysql
+  mysql-payment:
+    image: mysql:8.0
+    networks:
+      - ecommerce_network
+    environment:
+      - MYSQL_ROOT_PASSWORD=1234
+    ports:
+      - "3308:3306"
+    volumes:
+      - ./data/payment:/var/lib/mysql
+  mysql-delivery:
+    image: mysql:8.0
+    networks:
+      - ecommerce_network
+    environment:
+      - MYSQL_ROOT_PASSWORD=1234
+    ports:
+      - "3309:3306"
+    volumes:
+      - ./data/delivery:/var/lib/mysql
+  mysql-product:
+    image: mysql:8.0
+    networks:
+      - ecommerce_network
+    environment:
+      - MYSQL_ROOT_PASSWORD=1234
+    ports:
+      - "3310:3306"
+    volumes:
+      - ./data/product:/var/lib/mysql
+
   redis:
     image: redis
     networks:
