member-service dto 수정  #14

--- a/member-service/src/test/resources/application.yml
+++ b/member-service/src/test/resources/application.yml
@@ -20,6 +20,11 @@ spring:
       hibernate:
         format_sql: true
 
+  data:
+    redis:
+      host: ${spring.redis.host}
+      port: ${spring.redis.port}
+
   h2:
     console:
       enabled: true
