커버링 인덱스 조회 성능 개선 & 캐싱 적용 #14

--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -59,6 +59,11 @@ dependencies {
 
     implementation 'org.redisson:redisson-spring-boot-starter:3.27.2'
 
+    // https://mvnrepository.com/artifact/org.testcontainers/testcontainers
+    testImplementation 'org.testcontainers:testcontainers:1.19.7'
+    // https://mvnrepository.com/artifact/org.testcontainers/kafka
+    testImplementation 'org.testcontainers:kafka:1.19.7'
+
     // actuator
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
