--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -47,6 +47,11 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j:3.1.1'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.27.2'
+
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
 
     // actuator
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
