scheduler 서버 분리 #14

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,4 +16,12 @@ include 'delivery-service:delivery-consumer'
 findProject(':delivery-service:delivery-consumer')?.name = 'delivery-consumer'
 include 'product-service:product-consumer'
 findProject(':product-service:product-consumer')?.name = 'product-consumer'
+include 'order-service:order-scheduler'
+findProject(':order-service:order-scheduler')?.name = 'order-scheduler'
+include 'payment-service:payment-scheduler'
+findProject(':payment-service:payment-scheduler')?.name = 'payment-scheduler'
+include 'delivery-service:delivery-scheduler'
+findProject(':delivery-service:delivery-scheduler')?.name = 'delivery-scheduler'
+include 'product-service:product-scheduler'
+findProject(':product-service:product-scheduler')?.name = 'product-scheduler'
 
