--- a/payment-service/payment-core/build.gradle
+++ b/payment-service/payment-core/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'org.springframework.boot' version '3.2.6'
     id 'io.spring.dependency-management' version '1.1.5'
     id 'com.palantir.docker' version '0.35.0'
-    id 'jacoco'
 }
 
 group = 'com.payment.paymentcore'
@@ -40,6 +39,11 @@ dependencies {
     // actuator
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+    // https://mvnrepository.com/artifact/org.testcontainers/testcontainers
+    testImplementation 'org.testcontainers:testcontainers:1.19.7'
+    // https://mvnrepository.com/artifact/org.testcontainers/kafka
+    testImplementation 'org.testcontainers:kafka:1.19.7'
+
     implementation project(':payment-service:payment-api')
 }
 
@@ -65,44 +69,5 @@ docker {
 
 test {
     useJUnitPlatform()
-//    finalizedBy jacocoTestReport
 }
 
-// jacooc
-jacocoTestReport {
-    dependsOn test
-    finalizedBy jacocoTestCoverageVerification
-
-    excludedClassFilesForReport(classDirectories)
-}
-
-private excludedClassFilesForReport(classDirectories) {
-    classDirectories.setFrom(
-            files(classDirectories.files.collect {
-                fileTree(dir: it, exclude: [
-                        "**/protobuf/**",
-                        "**/*Application*",
-                        "**/*Config*",
-                        "**/entity/Q*",
-                        "**/common/Q*",
-                        "**/S3Utils*"
-                ])
-            })
-    )
-}
-
-jacocoTestCoverageVerification {
-    violationRules {
-        rule {
-            element = 'CLASS'
-            includes = ['com.**.usecase.**']
-
-            limit {
-                counter = 'LINE'
-                value = 'COVEREDRATIO'
-                minimum = 0.8
-            }
-
-        }
-    }
-}
