--- a/delivery-service/delivery-scheduler/build.gradle
+++ b/delivery-service/delivery-scheduler/build.gradle
@@ -27,3 +27,12 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+// 도커
+docker {
+    println(tasks.bootJar.outputs.files)
+    name rootProject.name + '-' + project.name.toLowerCase() + ":" + version
+    dockerfile file('../../Dockerfile')
+    files tasks.bootJar.outputs.files
+    buildArgs(['JAR_FILE': tasks.bootJar.outputs.files.singleFile.name])
+}
