--- a/discovery-service/build.gradle
+++ b/discovery-service/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.6'
     id 'io.spring.dependency-management' version '1.1.5'
+    id 'com.palantir.docker' version '0.35.0'
 }
 
 group = 'com.discoveryservice'
@@ -25,4 +26,13 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+// 도커
+docker {
+    println(tasks.bootJar.outputs.files)
+    name rootProject.name + '-' + project.name.toLowerCase() + ":" + version
+    dockerfile file('../Dockerfile')
+    files tasks.bootJar.outputs.files
+    buildArgs(['JAR_FILE': tasks.bootJar.outputs.files.singleFile.name])
 }
