--- a/order-service/order-core/build.gradle
+++ b/order-service/order-core/build.gradle
@@ -79,7 +79,7 @@ tasks.withType(JavaCompile) {
 docker {
     println(tasks.bootJar.outputs.files)
     name rootProject.name + '-' + project.name.toLowerCase() + ":" + version
-    dockerfile file('../Dockerfile')
+    dockerfile file('../../Dockerfile')
     files tasks.bootJar.outputs.files
     buildArgs(['JAR_FILE': tasks.bootJar.outputs.files.singleFile.name])
 }
