--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -16,19 +16,20 @@ spring.application.name: gateway-service
 spring:
   config:
     import:
-      - classpath:/application-route.yml
-      - classpath:/application-secret.yml
+      - classpath:/application-docker.yml
+#      - classpath:/application-route.yml
+#      - classpath:/application-secret.yml
 
-management:
-  tracing:
-    sampling:
-      probability: 1.0
-    propagation:
-      consume: b3
-      produce: b3_multi
-  zipkin:
-    tracing:
-      endpoint: "http://localhost:9411/api/v2/spans"
-logging:
-  pattern:
-    level: "%5p [%X{traceId:-},%X{spanId:-}]"
+#management:
+#  tracing:
+#    sampling:
+#      probability: 1.0
+#    propagation:
+#      consume: b3
+#      produce: b3_multi
+#  zipkin:
+#    tracing:
+#      endpoint: "http://localhost:9411/api/v2/spans"
+#logging:
+#  pattern:
+#    level: "%5p [%X{traceId:-},%X{spanId:-}]"
