--- a/product-service/product-core/src/main/resources/application.yml
+++ b/product-service/product-core/src/main/resources/application.yml
@@ -4,9 +4,10 @@ server.port: 0
 spring:
   config:
     import:
-      - classpath:/application-local.yml
-      - classpath:/application-prod.yml
-      - classpath:/application-secret.yml
+      - classpath:/application-docker.yml
+#      - classpath:/application-local.yml
+#      - classpath:/application-prod.yml
+#      - classpath:/application-secret.yml
 
   profiles:
     default: local
