delivery yml 수정

--- a/delivery-service/delivery-core/src/main/resources/application.yml
+++ b/delivery-service/delivery-core/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
   config:
     import:
       - classpath:/application-local.yml
-      - classpath:/application-prod.yml
-      - classpath:/application-secret.yml
+#      - classpath:/application-prod.yml
+#      - classpath:/application-secret.yml
 
   profiles:
     default: local
