--- a/delivery-service/delivery-core/src/main/resources/application.yml
+++ b/delivery-service/delivery-core/src/main/resources/application.yml
@@ -4,7 +4,8 @@ server.port: 0
 spring:
   config:
     import:
-      - classpath:/application-local.yml
+      - classpath:/application-docker.yml
+#      - classpath:/application-local.yml
 #      - classpath:/application-prod.yml
 #      - classpath:/application-secret.yml
 
