--- a/member-service/member-api/src/main/resources/application.yml
+++ b/member-service/member-api/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+spring.application.name: member-service
 server.port: 0
 
 spring:
@@ -9,3 +10,13 @@ spring:
 
   profiles:
     default: local
+
+eureka:
+  instance:
+    hostname: localhost
+    instance-id: ${spring.application.name}:${server.port}
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://127.0.0.1:8761/eureka
