payment 프로젝트 구조 변경 #14

--- a/member-service/member-api/build.gradle
+++ b/member-service/member-api/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     testImplementation 'org.testcontainers:kafka:1.19.7'
 
     implementation project(':member-service:member-core')
+    implementation project(':common')
 }
 
 test {
