product 프로젝트 구조 변경 #14

--- a/payment-service/payment-api/build.gradle
+++ b/payment-service/payment-api/build.gradle
@@ -25,6 +25,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    // https://mvnrepository.com/artifact/org.testcontainers/testcontainers
+    testImplementation 'org.testcontainers:testcontainers:1.19.7'
+    // https://mvnrepository.com/artifact/org.testcontainers/kafka
+    testImplementation 'org.testcontainers:kafka:1.19.7'
+
     implementation project(':payment-service:payment-core')
 
 }
