--- a/product-service/product-api/build.gradle
+++ b/product-service/product-api/build.gradle
@@ -25,6 +25,15 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    // https://mvnrepository.com/artifact/org.testcontainers/testcontainers
+    testImplementation 'org.testcontainers:testcontainers:1.19.7'
+    // https://mvnrepository.com/artifact/org.testcontainers/kafka
+    testImplementation 'org.testcontainers:kafka:1.19.7'
+
+    implementation project(':product-service:product-core')
+
 }
 
 test {
