--- a/product-service/product-api/src/main/resources/application.yml
+++ b/product-service/product-api/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+spring.application.name: product-service
 server.port: 0
 
 spring:
@@ -15,4 +16,12 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
 
-
+eureka:
+  instance:
+    hostname: localhost
+    instance-id: ${spring.application.name}:${server.port}
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://127.0.0.1:8761/eureka
